--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,11 +32,7 @@ jobs:
           rm: true
           strip_components: 0
           exclude: ".git"
-      - name : Create .env.local
-        run: |
-          echo "NEXT_PUBLIC_SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> .env.local
-          echo "NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.SUPABASE_ANON_KEY }}" >> .env.local
-          echo "NEXT_PUBLIC_BACKEND=${{ secrets.BACKEND }}" >> .env.local
+
       - name: SSH and deploy frontend
         uses: appleboy/ssh-action@master
         with:
@@ -45,6 +41,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd ~/PlayForYou/frontend
+            echo "${{ secrets.FRONT_ENV_PROD }}" >> .env.local
 
 
             docker-compose down
