--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,7 +79,7 @@ jobs:
             curl -f http://localhost:$PORT || (echo "Health check failed" && exit 1)
 
             # Nginx conf 갱신 (템플릿 -> 실제 conf)
-            sed "s/__FRONTEND_PORT__/$PORT/" nginx/p4you.conf.template > nginx/p4you.conf
+            sed "s/__FRONTEND_PORT__/$PORT/" ~/PlayForYou/nginx/p4you.conf.template > /etc/nginx/site-available/p4you.conf
 
             # Nginx 재시작
             sudo nginx -t && sudo systemctl reload nginx
