--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Frontend (Blue-Green)
+name: Deploy Frontend
 
 on:
   push:
@@ -9,82 +9,90 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    env:
+      FRONTEND_PORT_BLUE: 3000
+      FRONTEND_PORT_GREEN: 3001
+
     steps:
-      # 1️⃣ 코드 가져오기
+      # 1️⃣ 코드를 가져온다.
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2️⃣ 노드 모듈 캐시
-      - name: Cache node_modules
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+      # 2️⃣ 커밋 메시지에서 배포 타겟 버전을 정한다.
+      - name: Determine deploy version from commit message
+        id: set_version
+        run: |
+          if [[ "${{ github.event.head_commit.message }}" =~ "deploy:green" ]]; then
+            echo "version=green" >> $GITHUB_OUTPUT
+          else
+            echo "version=blue" >> $GITHUB_OUTPUT
+          fi
 
-      # 3️⃣ 서버로 코드 업로드 (temp_upload 폴더)
-      - name: Upload frontend project
+      # 3️⃣ 선택된 버전에 따라 경로와 포트를 설정한다.
+      - name: Set environment variables
+        run: |
+          if [ "${{ steps.set_version.outputs.version }}" = "blue" ]; then
+            echo "TARGET_DIR=frontend_blue" >> $GITHUB_ENV
+            echo "COMPOSE_FILE=docker-compose.blue.yml" >> $GITHUB_ENV
+            echo "FRONTEND_PORT=${{ env.FRONTEND_PORT_BLUE }}" >> $GITHUB_ENV
+          else
+            echo "TARGET_DIR=frontend_green" >> $GITHUB_ENV
+            echo "COMPOSE_FILE=docker-compose.green.yml" >> $GITHUB_ENV
+            echo "FRONTEND_PORT=${{ env.FRONTEND_PORT_GREEN }}" >> $GITHUB_ENV
+          fi
+
+      # 4️⃣ 선택된 frontend 디렉토리만 서버로 업로드
+      - name: Upload selected frontend
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          source: "./*"
-          target: "~/PlayForYou/temp_upload"
+          source: "${{ env.TARGET_DIR }}/*"
+          target: "~/PlayForYou/${{ env.TARGET_DIR }}"
           rm: true
-          strip_components: 0
+          strip_components: 1
           exclude: ".git"
 
-      # 4️⃣ 서버에서 Blue/Green 배포
-      - name: SSH and deploy with Blue-Green strategy
+      # 5️⃣ nginx 템플릿과 설정도 함께 업로드
+      - name: Upload nginx template & files
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          source: "nginx/*"
+          target: "~/PlayForYou/nginx"
+          rm: false
+          strip_components: 1
+
+      # 6️⃣ SSH 접속해서 컨테이너 재시작 + nginx conf 갱신 + 심볼릭 링크 연결 + 버전 기록
+      - name: SSH deploy & update nginx
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            cd ~/PlayForYou
+            cd ~/PlayForYou/${TARGET_DIR}
 
-            # 현재 활성 버전 확인
-            ACTIVE=$(cat active_version)
+            echo "[+] Docker Compose: ${COMPOSE_FILE} on port ${FRONTEND_PORT}"
 
-            if [ "$ACTIVE" = "blue" ]; then
-              TARGET="green"
-              PORT="3001"
-            else
-              TARGET="blue"
-              PORT="3000"
-            fi
+            # 새 버전 컨테이너 재빌드
+            docker-compose -f ${COMPOSE_FILE} down
+            docker-compose -f ${COMPOSE_FILE} up -d --build
 
-            echo "Deploying to $TARGET on port $PORT"
+            # nginx conf 생성
+            sed "s/__FRONTEND_PORT__/${FRONTEND_PORT}/g" ~/PlayForYou/nginx/p4you.conf.template > ~/PlayForYou/nginx/p4you.conf
 
-            # 비활성 버전에 코드 덮어쓰기
-            rm -rf frontend_$TARGET
-            mv temp_upload frontend_$TARGET
+            # active_version 파일에 현재 버전 기록
+            echo "${TARGET_DIR}" > ~/PlayForYou/nginx/active_version
 
-            # .env.local 생성 (선택)
-            cd frontend_$TARGET
-            cat << 'EOF' > .env.local
-            ${{ secrets.FRONT_ENV_PROD }}
-            EOF
+            # nginx sites-available에 복사
+            sudo cp ~/PlayForYou/nginx/p4you.conf /etc/nginx/sites-available/p4you.conf
 
-            # 새 컨테이너 빌드 & 실행
-            docker-compose down || true
-            PORT=$PORT docker-compose up -d --build
+            # sites-enabled에 심볼릭 링크 연결 (기존 것도 덮어씀)
+            sudo ln -sf /etc/nginx/sites-available/p4you.conf /etc/nginx/sites-enabled/p4you.conf
 
-            # 헬스체크
-            echo "Waiting for health check..."
-            sleep 5
-            curl -f http://localhost:$PORT || (echo "Health check failed" && exit 1)
-
-            # Nginx conf 갱신 (템플릿 -> 실제 conf)
-            sed "s/__FRONTEND_PORT__/$PORT/" ~/PlayForYou/nginx/p4you.conf.template > /etc/nginx/site-available/p4you.conf
-
-            # Nginx 재시작
+            # nginx 설정 검사 후 reload
             sudo nginx -t && sudo systemctl reload nginx
-
-            # 새 버전을 active로 기록
-            echo "$TARGET" > active_version
-
-            echo "✅ Blue-Green deployment successful!"
