--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          source: "${{ env.TARGET_DIR }}/*"
+          source: "./*"
           target: "~/PlayForYou/${{ env.TARGET_DIR }}"
           rm: true
           strip_components: 1
