--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,10 @@ name: Deploy Frontend (Blue-Green)
 
 on:
   push:
+    branches:
+      - main
+jobs:
+  deploy:
       runs-on: ubuntu-latest
 
       steps:
@@ -13,8 +17,10 @@ on:
          - name: Cache node_modules
            uses: actions/cache@v3
            with:
-           restore-keys: |
-             ${{ runner.os }}-node-
+             path: node_modules
+             key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+             restore-keys: |
+               ${{ runner.os }}-node-
 
          # 3️⃣ 서버로 코드 업로드 (temp_upload 폴더)
          - name: Upload frontend project
