--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,7 +70,11 @@ jobs:
                
                # 새 컨테이너 빌드 & 실행
                docker-compose -f docker-compose.$TARGET.yml down || true
-               PORT=$PORT docker-compose -f docker-compose.$TARGET.yml up -d --build
+               # Step 1: 빌드만 하고 실패나면 바로 중단
+               docker-compose -f docker-compose.$TARGET.yml build
+                
+               # Step 2: 빌드 성공했으면 컨테이너 실행
+               docker-compose -f docker-compose.$TARGET.yml up -d
                
                # 헬스체크
                echo "Waiting for health check..."
